Fix overflow header

--- a/Bootstrap/css/custom(Trinh Son).css
+++ b/Bootstrap/css/custom(Trinh Son).css
@@ -1,3 +1,7 @@
+html, body{
+  overflow-x: hidden;
+}
+
 .navbar-custom{
   position: relative;
 }
@@ -7,7 +11,6 @@
   left: 10rem;
   top: 0.5rem;
 }
-
 .navbar-collapse-custom-1{
   position: relative;
   left: 21rem;
@@ -28,8 +31,9 @@
 
 .button-bar-custom-1{
   position: relative;
-  left: 80rem;
+  left: 75rem;
   top: -5rem;
+  width: 13rem;
 }
 
 .login{
